--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import './components/section-title';
 @import './components/logo';
+@import './components/mobile-menu';
 @import './components/backdrop';
 @import './components/modal-windows';
 @import './components/modal-form';
