--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,9 @@
   --first-portfolio-card-shadow: rgba(0, 0, 0, 0.12);
   --second-portfolio-card-shadow: rgba(0, 0, 0, 0.06);
   --third-portfolio-card-shadow: rgba(0, 0, 0, 0.16);
+  --first-mobile-menu-shadow: rgba(0, 0, 0, 0.04);
+  --second-mobile-menu-shadow: rgba(0, 0, 0, 0.08);
+  --third-mobile-menu-shadow: rgba(0, 0, 0, 0.16);
   --down-bgc-service: #C4C4C4;
   --accent-color-icon: #FFFFFF;
   --icon-color: #AFB1B8;
@@ -167,9 +170,10 @@ button {
   left: 0;
   z-index: 100;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   background-color: var(--pimary-bg-color);
   background-color: yellowgreen;
+  box-shadow: 0px 4px 8px var(--first-mobile-menu-shadow), 0px 2px 4px var(--second-mobile-menu-shadow), 0px 1px 3px var(--third-mobile-menu-shadow);
 }
 
 .mobile-menu__container {
@@ -204,15 +208,29 @@ button {
   display: flex;
   flex-direction: column;
   row-gap: 32px;
+  cursor: pointer;
+}
+
+.mobile-nav__item {
+  position: relative;
+}
+
+.mobile-nav__link,
+.mobile-contacts__link,
+.mobile-social-list__link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .mobile-nav__link {
-  font-weight: 500;
+  display: block;
   font-size: 40px;
-  line-height: 47px;
-  letter-spacing: 0.02em;
-  text-decoration: none;
+  line-height: 1.18;
   color: inherit;
+}
+.mobile-nav__link:hover, .mobile-nav__link:focus {
+  color: var(--accent-color);
 }
 
 .mobile-nav__link_current {
@@ -231,8 +249,42 @@ button {
   border-radius: 2px;
 }
 
-mobile-nav__item {
+.mobile-contacts {
+  margin-top: auto;
+}
+
+.mobile-contacts__link {
+  display: flex;
+  font-size: 24px;
+  line-height: 1.17;
+  color: var(--secondary-text-color);
+}
+
+.mobile-contacts__link_accent {
+  margin-bottom: 32px;
+  font-size: 34px;
+  line-height: 1.18;
+  color: var(--accent-color);
+}
+
+.mobile-social-list {
+  display: inline-flex;
+  margin-top: 64px;
+  column-gap: 10px;
+}
+
+.mobile-social-list__item {
   position: relative;
+}
+.mobile-social-list__item:not(:last-child) {
+  border-right: 1px solid var(--border-color-modal);
+  padding-right: 10px;
+}
+
+.mobile-social-list__link {
+  font-size: 18px;
+  line-height: 1.22;
+  color: var(--accent-color);
 }
 
 .backdrop {
