--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -4,9 +4,10 @@
     left: 0;
     z-index: 100;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     background-color: var(--pimary-bg-color);
     background-color: yellowgreen;
+    box-shadow: 0px 4px 8px var(--first-mobile-menu-shadow), 0px 2px 4px var(--second-mobile-menu-shadow), 0px 1px 3px var(--third-mobile-menu-shadow);
 }
 
 .mobile-menu__container {
@@ -43,15 +44,31 @@
     display: flex;
     flex-direction: column;
     row-gap: 32px;
+    cursor: pointer;
+
+}
+
+.mobile-nav__item {
+    position: relative;
+}
+
+.mobile-nav__link,
+.mobile-contacts__link,
+.mobile-social-list__link {
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
 .mobile-nav__link {
-font-weight: 500;
-font-size: 40px;
-line-height: 47px;
-letter-spacing: 0.02em;
-text-decoration: none;
-color: inherit;
+    display: block;
+    @include font ($fs: 40px, $lh: 1.18);
+    color: inherit;
+
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 
 .mobile-nav__link_current {
@@ -71,6 +88,42 @@ color: inherit;
     }
 }
 
-mobile-nav__item {
+// .mobile-menu__list-container {
+//     margin-top: auto;
+// }
+
+.mobile-contacts {
+    margin-top: auto;
+}
+
+.mobile-contacts__link {
+    display: flex;
+    @include font ($fs: 24px, $lh: 1.17);
+    color: var(--secondary-text-color);
+}
+
+.mobile-contacts__link_accent {
+    margin-bottom: 32px;
+    @include font ($fs: 34px, $lh: 1.18);
+    color: var(--accent-color);
+}
+
+.mobile-social-list {
+    display: inline-flex;
+    margin-top: 64px;
+    column-gap: 10px;
+}
+
+.mobile-social-list__item {
     position: relative;
+
+    &:not(:last-child) {
+        border-right: 1px solid var(--border-color-modal);
+        padding-right: 10px;
+    }
+}
+
+.mobile-social-list__link {
+    @include font ($fs: 18px, $lh: 1.22);
+    color: var(--accent-color);
 }
