--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -23,6 +23,9 @@
     --first-portfolio-card-shadow: rgba(0, 0, 0, 0.12);
     --second-portfolio-card-shadow: rgba(0, 0, 0, 0.06);
     --third-portfolio-card-shadow: rgba(0, 0, 0, 0.16);
+    --first-mobile-menu-shadow: rgba(0, 0, 0, 0.04);
+    --second-mobile-menu-shadow: rgba(0, 0, 0, 0.08);
+    --third-mobile-menu-shadow: rgba(0, 0, 0, 0.16);
     --down-bgc-service: #C4C4C4;
     --accent-color-icon: #FFFFFF;
     --icon-color: #AFB1B8;
