--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,3 +1,4 @@
+@media screen and (max-width: 767px) {
 .mobile-menu {
     position: fixed;
     top: 0;
@@ -8,6 +9,17 @@
     background-color: var(--pimary-bg-color);
     background-color: yellowgreen;
     box-shadow: 0px 4px 8px var(--first-mobile-menu-shadow), 0px 2px 4px var(--second-mobile-menu-shadow), 0px 1px 3px var(--third-mobile-menu-shadow);
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity var(--transition-dur-tf), visibility var(--transition-dur-tf);
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .mobile-menu__container {
@@ -42,10 +54,13 @@
 
 .mobile-nav {
     display: flex;
+    cursor: pointer;
+}
+
+.mobile-nav__list {
+    display: flex;
     flex-direction: column;
     row-gap: 32px;
-    cursor: pointer;
-
 }
 
 .mobile-nav__item {
@@ -64,6 +79,7 @@
     display: block;
     @include font ($fs: 40px, $lh: 1.18);
     color: inherit;
+    transition: color var(--transition-dur-tf);
 
     &:hover,
     &:focus {
@@ -78,7 +94,7 @@
         display: block;
         position: absolute;
         content: "";
-        width: 100%;
+        min-width: 100%;
         height: 3.71px;
         margin-left: auto;
         margin-right: auto;
@@ -88,11 +104,7 @@
     }
 }
 
-// .mobile-menu__list-container {
-//     margin-top: auto;
-// }
-
-.mobile-contacts {
+.mobile-contactssss {
     margin-top: auto;
 }
 
@@ -126,4 +138,11 @@
 .mobile-social-list__link {
     @include font ($fs: 18px, $lh: 1.22);
     color: var(--accent-color);
+}
+}
+
+@media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
 }
