--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,28 @@
-.site-nav {
+@media screen and (max-width: 767px) {
+    .site-nav {
     display: none;
 }
 
-.contacts {
-    display: none;
-}
+    .contacts {
+        display: none;
+    }
 
-.header {
-    padding-top: 16px;
-    padding-bottom: 16px;
+    .mobile-burger-btn {
+        line-height: 0;
+        border: none;
+        background-color: transparent;
+        padding: 0;
+    }
+
+    .mobile-burger-btn__icon {
+        width: 40px;
+        height: 40px;
+    }
+
+    .header {
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
 }
 
 .header__container {
@@ -17,98 +31,135 @@
     justify-content: space-between;
 }
 
-.mobile-burger-btn {
-    line-height: 0;
-    border: none;
-    background-color: transparent;
-    padding: 0;
+@media screen and (min-width: 768px) {
+    .mobile-burger-btn {
+        display: none;
+    }
+
+    .main-nav {
+        display: flex;
+        align-items: center;
+    }
+
+    .site-nav {
+        display: flex;
+        margin-left: 88px;
+        column-gap: 50px;
+    }
+
+    .site-nav__item {
+        position: relative;
+    }
+
+    .site-nav__link,
+    .contacts__link {
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    transition: color var(--transition-dur-tf);
 }
 
-.mobile-burger-btn__icon {
-    width: 40px;
-    height: 40px;
+    .site-nav__link {
+        display: block;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        @include font ($lh: 1.14);
+        color: inherit;
+
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+    }
+
+    .site-nav__link_current {
+        color: var(--accent-color);
+
+        &::after {
+            display: block;
+            position: absolute;
+            content: "";
+            width: 100%;
+            height: 4px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 30px;
+
+            background: var(--accent-color);
+            border-radius: 2px;
+        }
+    }
+
+    .contacts__item:not(:first-child) {
+        margin-top: 10px;
+    }
+
+    .contacts__link {
+        display: flex;
+        align-items: center;
+        @include font (12px, 1.17);
+        color: var(--secondary-text-color);
+
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+    }
+
+    .mail-icon,
+    .smartphone-icon {
+        margin-right: 8px;
+        fill: currentColor;
+    }
+
+    .mail-icon {
+        width: 14px;
+        height: 10px;
+    }
+
+    .smartphone-icon {
+        width: 10px;
+        height: 14px;
+    }
 }
 
+@media screen and (min-width: 1200px) {
+    .site-nav {
+        margin-left: 93px;
+    }
 
+    .contacts {
+        display: flex;
+        align-items: baseline;
+        justify-content: center;
+        margin-left: auto;
+    }
 
-// .main-nav {
-//     display: flex;
-//     align-items: center;
-// }
+    .contacts__item:not(:first-child) {
+        margin-top: 0;
+    }
 
-// .site-nav {
-//     display: flex;
-//     margin-left: 93px;
-//     column-gap: 50px;
-// }
+    .contacts__link {
+        padding-top: 32px;
+        padding-bottom: 32px;
+        @include font (14px, 1.14);
+    }
 
-// .site-nav__link,
-// .contacts__link {
-//     padding-top: 32px;
-//     padding-bottom: 32px;
-//     font-weight: 500;
-//     @include font ($lh: 1.14);
-//     letter-spacing: 0.02em;
-//     text-decoration: none;
-//     transition: color var(--transition-dur-tf);
-// }
+    .contacts__link_right {
+        margin-right: 30px;
+    }
 
-// .site-nav__link {
-//     display: block;
-//     color: inherit;
+    .mail-icon,
+    .smartphone-icon {
+        margin-right: 10px;
+    }
 
-//     &:hover,
-//     &:focus {
-//         color: var(--accent-color);
-//     }
-// }
+    .mail-icon {
+        width: 16px;
+        height: 12px;
+    }
 
-// .site-nav__link_current {
-//     color: var(--accent-color);
-
-//     &::after {
-//         display: block;
-//         position: absolute;
-//         content: "";
-//         width: 100%;
-//         height: 4px;
-//         margin-left: auto;
-//         margin-right: auto;
-//         margin-top: 30px;
-
-//         background: var(--accent-color);
-//         border-radius: 2px;
-//     }
-// }
-
-// .site-nav__item {
-//     position: relative;
-// }
-
-// .contacts {
-//     display: flex;
-//     align-items: baseline;
-//     justify-content: center;
-//     margin-left: auto;
-// }
-
-// .contacts__link {
-//     display: flex;
-//     align-items: center;
-//     color: var(--secondary-text-color);
-
-//     &:hover,
-//     &:focus {
-//         color: var(--accent-color);
-//     }
-// }
-
-// .contacts__link_right {
-//     margin-right: 30px;
-// }
-
-// .mail-icon,
-// .smartphone-icon {
-//     margin-right: 10px;
-//     fill: currentColor;
-// }
+    .smartphone-icon {
+        height: 16px;
+    }
+}
