--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -1,5 +1,12 @@
 .section-title {
+    margin-bottom: 30px;
+    @include font (28px, 1.18);
+    text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+    .section-title {
     margin-bottom: 50px;
     @include font (36px, 1.17);
-    text-align: center;
+    }
 }
