--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -7,8 +7,6 @@
 }
 
 .team__item {
-    flex-basis: calc((100% - 90px) / 4);
-
     background-color: var(--pimary-bg-color);
 
     box-shadow: 0px 1px 3px var(--first-team-shadow), 0px 1px 1px var(--second-team-shadow), 0px 2px 1px var(--third-team-shadow);
@@ -17,7 +15,7 @@
 
 .team__card-content {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 24px;
 }
 
 .team__title,
@@ -69,3 +67,32 @@
     fill: var(--accent-color-icon);
     }
 }
+
+
+
+@media screen and (min-width: 768px) {
+    .team__item {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+}
+
+
+
+
+@media screen and (min-width: 1200px) {
+        .team__item {
+        flex-basis: calc((100% - 90px) / 4);
+    }
+
+    .team__card-content {
+        padding-bottom: 30px;
+    }
+}
+
+
+
+
+
+
+
+
