--- a/css/main.css
+++ b/css/main.css
@@ -892,14 +892,14 @@ button {
 }
 
 .client__item {
-  flex-basis: calc((100% - 150px) / 6);
+  flex-basis: calc((100% - 30px) / 2);
 }
 
 .client__card-thumb {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--client-border);
   border-radius: 4px;
@@ -919,6 +919,22 @@ button {
   fill: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .client__item {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+  .client__card-thumb {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__item {
+    flex-basis: calc((100% - 150px) / 6);
+  }
+  .client__card-thumb {
+    width: 170px;
+  }
+}
 .portfolio__btn-list {
   display: flex;
   margin-bottom: 50px;
