--- a/css/main.css
+++ b/css/main.css
@@ -1028,13 +1028,8 @@ button {
   background-color: var(--dark-bg-color);
 }
 
-.footer__container {
-  display: flex;
-  align-items: baseline;
-}
-
 .address__card-thumb {
-  width: 231px;
+  text-align: center;
 }
 
 .address {
@@ -1046,7 +1041,7 @@ button {
 }
 
 .address__item:not(:first-child) {
-  margin-top: 9px;
+  margin-top: 8px;
 }
 
 .address__list .address__link_light {
@@ -1063,8 +1058,7 @@ button {
 }
 
 .footer__social-card-thumb {
-  width: 206px;
-  margin-left: 70px;
+  margin-top: 60px;
 }
 
 .footer__text {
@@ -1073,6 +1067,7 @@ button {
   line-height: 1.14;
   color: var(--primary-light-text-color);
   text-transform: uppercase;
+  text-align: center;
 }
 
 .footer__social-list {
@@ -1109,8 +1104,8 @@ button {
 }
 
 .footer__subscription-card-thumb {
-  width: 570px;
-  margin-left: auto;
+  width: 450px;
+  margin-top: 60px;
 }
 
 .footer-form {
@@ -1119,7 +1114,7 @@ button {
 
 .footer-form__input {
   display: inline-flex;
-  width: 358px;
+  width: 450px;
   height: 50px;
   box-sizing: border-box;
   padding: 15px 16px;
@@ -1145,13 +1140,51 @@ button {
 .footer-form__btn {
   display: inline-flex;
   align-items: center;
-  margin-left: 12px;
-  padding: 10px 28px;
+  margin-top: 20px;
+  padding: 10px 28px 10px 31px;
 }
 
 .send-icon {
   width: 24px;
   height: 24px;
   fill: var(--icon-color-footer);
-  margin-left: 10px;
+  margin-left: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__social-card-thumb {
+    margin-left: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    align-items: baseline;
+  }
+  .address__card-thumb {
+    width: 231px;
+  }
+  .address__item:not(:first-child) {
+    margin-top: 9px;
+  }
+  .footer__social-card-thumb {
+    margin-left: 70px;
+  }
+  .footer__text {
+    text-align: left;
+  }
+  .footer__subscription-card-thumb {
+    width: 570px;
+    margin-left: auto;
+  }
+  .footer-form__input {
+    width: 358px;
+  }
+  .footer-form__btn {
+    margin-left: 12px;
+    padding-left: 28px;
+  }
+  .send-icon {
+    margin-left: 10px;
+  }
 }/*# sourceMappingURL=main.css.map */
