--- a/css/main.css
+++ b/css/main.css
@@ -1138,8 +1138,10 @@ button {
 }
 
 .footer-form__btn {
-  display: inline-flex;
+  display: block;
   align-items: center;
+  margin-right: auto;
+  margin-left: auto;
   margin-top: 20px;
   padding: 10px 28px 10px 31px;
 }
@@ -1153,7 +1155,19 @@ button {
 
 @media screen and (min-width: 768px) {
   .footer__social-card-thumb {
-    margin-left: 165px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0;
+  }
+  .card-thumb-tablet-position {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+  .footer__subscription-card-thumb {
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1163,11 +1177,13 @@ button {
   }
   .address__card-thumb {
     width: 231px;
+    text-align: left;
   }
   .address__item:not(:first-child) {
     margin-top: 9px;
   }
   .footer__social-card-thumb {
+    display: block;
     margin-left: 70px;
   }
   .footer__text {
@@ -1175,12 +1191,15 @@ button {
   }
   .footer__subscription-card-thumb {
     width: 570px;
-    margin-left: auto;
+    margin-top: 0;
+    margin-right: 0;
   }
   .footer-form__input {
+    display: inline-flex;
     width: 358px;
   }
   .footer-form__btn {
+    display: inline-flex;
     margin-left: 12px;
     padding-left: 28px;
   }
