--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,11 +4,6 @@
     background-color: var(--dark-bg-color);
 }
 
-// .footer__container {
-//     display: flex;
-//     align-items: baseline;
-// }
-
 .address__card-thumb {
     // width: 232px;
     text-align: center;
@@ -41,7 +36,6 @@
 }
 
 .footer__social-card-thumb {
-    // width: 206px;
     margin-top: 60px;
 } 
 
@@ -125,8 +119,10 @@
 }
 
 .footer-form__btn {
-    display: inline-flex;
+    display: block;
     align-items: center;
+    margin-right: auto;
+    margin-left: auto;
     margin-top: 20px;
     padding: 10px 28px 10px 31px;
     @extend %button;
@@ -141,13 +137,25 @@
 } 
 
 
-
 @media screen and (min-width: 768px) {
     .footer__social-card-thumb {
-    margin-left: 165px;
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        margin-top: 0;
     } 
-}
 
+    .card-thumb-tablet-position {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-around;
+    }
+
+    .footer__subscription-card-thumb {
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
 
 
 @media screen and (min-width: 1200px) {
@@ -158,6 +166,7 @@
 
     .address__card-thumb {
         width: 231px;
+        text-align: left;
     } 
 
     .address__item:not(:first-child) {
@@ -165,7 +174,8 @@
     }
 
     .footer__social-card-thumb {
-    margin-left: 70px;
+        display: block;
+        margin-left: 70px;
     } 
 
     .footer__text {
@@ -174,17 +184,19 @@
 
     .footer__subscription-card-thumb {
         width: 570px;
-        margin-left: auto;
+        margin-top: 0;
+        margin-right: 0;
     }
 
     .footer-form__input {
-        // display: inline-flex;
+        display: inline-flex;
         width: 358px;
     }
 
     .footer-form__btn {
-    margin-left: 12px;
-    padding-left: 28px;
+        display: inline-flex;
+        margin-left: 12px;
+        padding-left: 28px;
     }
 
     .send-icon {
