--- a/sass/layout/_service.scss
+++ b/sass/layout/_service.scss
@@ -9,6 +9,7 @@
     color: var(--primary-light-text-color);
     background-color: var(--down-bgc-service);
     background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url(../images/mainpage/servise/servise-mobile.jpg);
+    background-position: center;
     background-size: cover;
 }
 
