--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,7 +5,6 @@
 }
 
 .address__card-thumb {
-    // width: 232px;
     text-align: center;
 } 
 
@@ -83,7 +82,8 @@
 }
 
 .footer__subscription-card-thumb {
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     margin-top: 60px;
 }
 
@@ -93,7 +93,8 @@
 
 .footer-form__input {
     display: inline-flex;
-    width: 450px;
+    width: 100%;
+    max-width: 450px;
     height: 50px;
     box-sizing: border-box;
     padding: 15px 16px;
