--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -90,7 +90,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    @include font ();
+    @include font ($fs: 12px, $lh: 1.17);
     color: var(--secondary-text-color);
     overflow: hidden;
     cursor: pointer;
@@ -102,7 +102,7 @@
     border: 2px solid var(--pimary-text-color);
     border-radius: 3px;
     fill: #FFFFFF;
-    margin-right: 7px;
+    margin-right: 8px;
     transition: background-color var(--transition-dur-tf), border-color var(--transition-dur-tf);
 
     .modal-form__check:checked + & {
@@ -134,5 +134,19 @@
     &:hover,
     &:focus  {
         background-color: var(--accent-btn);
+    }
+}
+
+
+@media screen and (max-width: 1199px) {
+    .modal-form__text {
+        line-height: 1.5;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    .modal-form__check-label {
+        @include font ();
     }
 }
