--- a/sass/components/_modal-windows.scss
+++ b/sass/components/_modal-windows.scss
@@ -3,8 +3,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     padding: 40px;
     background-color: var(--pimary-bg-color);
 
@@ -32,5 +32,13 @@
     &:hover,
     &:focus {
         fill: var(--accent-color);
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    .modal {
+        width: 528px;
+        height: 581px;
     }
 }
