--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -82,8 +82,8 @@
 }
 
 .footer__subscription-card-thumb {
-    width: 100%;
-    max-width: 450px;
+    // width: 100%;
+    width: 450px;
     margin-top: 60px;
 }
 
@@ -136,6 +136,14 @@
 
     margin-left: 12px;
 } 
+
+
+@media screen and (max-width: 767px) {
+.footer__subscription-card-thumb {
+    width: 100%;
+    max-width: 450px;
+    }
+}
 
 
 @media screen and (min-width: 768px) {
